--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "axios": "^0.16.2",
+    "bulma": "^0.5.1",
     "feedme": "^1.0.1",
     "nuxt": "^1.0.0-rc4"
   },
@@ -28,6 +29,8 @@
     "eslint-plugin-node": "^5.1.1",
     "eslint-plugin-promise": "^3.5.0",
     "eslint-plugin-standard": "^3.0.1",
-    "push-dir": "^0.4.1"
+    "node-sass": "^4.5.3",
+    "push-dir": "^0.4.1",
+    "sass-loader": "^6.0.6"
   }
 }
